denoising and deblurring + latex macros

--- a/_config.yml
+++ b/_config.yml
@@ -31,3 +31,106 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+
+
+sphinx:
+  config:
+    mathjax_config:
+      tex:
+        macros:
+          "vect": ["\\boldsymbol{#1}", 1]
+          "mat": ["\\boldsymbol{#1}", 1]
+          "rvar": ["\\mathsf{#1}", 1]
+          "rvect": ["\\mathsf{\\boldsymbol{#1}}", 1]
+          "rmat": ["\\mathsf{\\boldsymbol{#1}}", 1]
+          "vx" : ["\\vect{x}"]
+          "vy" : ["\\vect{y}"]
+          "vz" : ["\\vect{z}"]
+          "vv" : ["\\vect{v}"]
+          "vw" : ["\\vect{w}"]
+          "va" : ["\\vect{a}"]
+          "vb" : ["\\vect{b}"]
+          "vc" : ["\\vect{c}"]
+          "vd" : ["\\vect{d}"]
+          "ve" : ["\\vect{e}"]
+          "vf" : ["\\vect{f}"]
+          "vg" : ["\\vect{g}"]
+          "vh" : ["\\vect{h}"]
+          "vk" : ["\\vect{k}"]
+          "vp" : ["\\vect{p}"]
+          "vn" : ["\\vect{n}"]
+          "vell" : ["\\vect{\\ell}"]
+          "vmu" : ["\\vect{\\mu}"]         
+          "mX" : ["\\mat{X}"]
+          "mY" : ["\\mat{Y}"]
+          "mZ" : ["\\mat{Z}"]
+          "mV" : ["\\mat{V}"]
+          "mW" : ["\\mat{W}"]
+          "mA" : ["\\mat{A}"]
+          "mB" : ["\\mat{B}"]
+          "mC" : ["\\mat{C}"]
+          "mD" : ["\\mat{D}"]
+          "mE" : ["\\mat{E}"]
+          "mF" : ["\\mat{F}"]
+          "mG" : ["\\mat{G}"]
+          "mH" : ["\\mat{H}"]
+          "mK" : ["\\mat{K}"]
+          "mP" : ["\\mat{P}"]
+          "mSigma" : ["\\mat{\\Sigma}"]
+          "mI" : ["\\mat{I}"]
+          "rx" : ["\\rvar{x}"]
+          "ry" : ["\\rvar{y}"]
+          "rz" : ["\\rvar{z}"]
+          "rv" : ["\\rvar{v}"]
+          "rw" : ["\\rvar{w}"]
+          "ra" : ["\\rvar{a}"]
+          "rb" : ["\\rvar{b}"]
+          "rc" : ["\\rvar{c}"]
+          "rd" : ["\\rvar{d}"]
+          "re" : ["\\rvar{e}"]
+          "rf" : ["\\rvar{f}"]
+          "rg" : ["\\rvar{g}"]
+          "rh" : ["\\rvar{h}"]
+          "rk" : ["\\rvar{k}"]
+          "rp" : ["\\rvar{p}"]
+          "rX" : ["\\rvar{X}"]
+          "rH" : ["\\rvar{H}"]
+          "rY" : ["\\rvar{Y}"]
+          "rvx" : ["\\rvect{x}"]
+          "rvy" : ["\\rvect{y}"]
+          "rvz" : ["\\rvect{z}"]
+          "rvv" : ["\\rvect{v}"]
+          "rvw" : ["\\rvect{w}"]
+          "rva" : ["\\rvect{a}"]
+          "rvb" : ["\\rvect{b}"]
+          "rvc" : ["\\rvect{c}"]
+          "rvd" : ["\\rvect{d}"]
+          "rve" : ["\\rvect{e}"]
+          "rvf" : ["\\rvect{f}"]
+          "rvg" : ["\\rvect{g}"]
+          "rvh" : ["\\rvect{h}"]
+          "rvk" : ["\\rvect{k}"]
+          "rvp" : ["\\rvect{p}"]
+          "rmX" : ["\\rmat{X}"]
+          "rmY" : ["\\rmat{Y}"]
+          "rmZ" : ["\\rmat{Z}"]
+          "rmV" : ["\\rmat{V}"]
+          "rmW" : ["\\rmat{W}"]
+          "rmA" : ["\\rmat{A}"]
+          "rmB" : ["\\rmat{B}"]
+          "rmC" : ["\\rmat{C}"]
+          "rmD" : ["\\rmat{D}"]
+          "rmE" : ["\\rmat{E}"]
+          "rmF" : ["\\rmat{F}"]
+          "rmG" : ["\\rmat{G}"]
+          "rmH" : ["\\rmat{H}"]
+          "rmK" : ["\\rmat{K}"]
+          "rmP" : ["\\rmat{P}"]
+          "EE" : ["\\mathbb{E}"]
+          "RR" : ["\\mathbb{R}"]
+          "CC" : ["\\mathbb{C}"]
+          "ZZ" : ["\\mathbb{Z}"]
+          "SS" : ["\\mathbb{S}"]
+          "norm": ["\\|#1\\|", 1]
+
+
