--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,7 @@
 format: jb-book
 root: intro
 chapters:
+- file: installation.md
 - file: introduction
 - file: modeling-knowledge
 - file: filtering
